objects/ASI_CRM_PROS_Segmentation_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Energy__c</fullName>
        <label>Energy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Energy</fullName>
                </value>
                <value>
                    <fullName>High Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Hostess__c</fullName>
        <label>Hostess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_CN_Channel__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>CN New Channel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>PROS Segmentation Mappings</relationshipLabel>
        <relationshipName>PROS_Segmentation_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Channel_Type__c</fullName>
        <label>Outlet Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type__c</fullName>
        <label>Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live Bar</fullName>
                </value>
                <value>
                    <fullName>Party Bar</fullName>
                </value>
                <value>
                    <fullName>Concert</fullName>
                </value>
                <value>
                    <fullName>Cocktail Bar</fullName>
                </value>
                <value>
                    <fullName>Wine Bar</fullName>
                </value>
                <value>
                    <fullName>Whisky Bar</fullName>
                </value>
                <value>
                    <fullName>Pub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PROS_Segmentation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PROS Segmentation</label>
        <referenceTo>ASI_CRM_CN_PROS_Segmentation__c</referenceTo>
        <relationshipLabel>PROS Segmentation Mappings</relationshipLabel>
        <relationshipName>PROS_Segmentation_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PROS Segmentation Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Energy__c</columns>
        <columns>ASI_CRM_Hostess__c</columns>
        <columns>ASI_CRM_New_Channel__c</columns>
        <columns>ASI_CRM_Outlet_Channel_Type__c</columns>
        <columns>ASI_CRM_Outlet_Type__c</columns>
        <columns>ASI_CRM_PROS_Segmentation__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PROSSM-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PROS Segmentation Mappings</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_PROS_SegmentationMap</fullName>
        <active>true</active>
        <label>CN PROS SegmentationMap</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>